--- a/pro1.html
+++ b/pro1.html
@@ -434,14 +434,7 @@
 </div>
 
   <script>
-    const images = [
-      'picture1.png', 'picture2.png', 'picture3.png', 'picture4.png', 'picture5.png', 'picture6.png',
-      'picture7.png', 'picture8.png', 'picture9.png', 'picture10.png', 'picture11.png', 'picture12.png',
-      'picture13.png', 'picture14.png', 'picture15.png', 'picture16.png', 'picture17.png', 'picture18.png',
-      'picture19.png', 'picture20.png', 'picture21.png', 'picture22.png', 'picture23.png', 'picture24.png',
-      'picture25.png', 'picture26.png', 'picture27.png', 'picture28.png', 'picture29.png', 'picture30.png',
-      'picture31.png', 'picture32.png', 'picture33.png', 'picture34.png', 'picture35.png'
-    ];
+    const images = document.querySelectorAll('img');
 
     function preloadImages(callback) {
               let imagesLoaded = 0;
