--- a/partners.html
+++ b/partners.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clients</title>
+  <title>Partners</title>
   <link rel="icon" href="logo.png" type="image/x-icon">
   <style>
     /* Reset and Body Styling */
@@ -162,6 +162,7 @@
         z-index: 800;
       }
     }
+    /*loading screen*/
     .loading-screen {
         position: fixed;
         top: 0;
@@ -172,17 +173,24 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white; /* Set a background color */
+        background-color: #fbfbfb;
       }
-
       .loading-screen img {
-        width: 500px; /* Adjust size of preloader image */
+        width: 150px; /* Adjust size of preloader image */
+      }
+      @media (max-width: 1050px) {
+        .loading-screen img{
+            width: 200px;
+          }
+      }
+      .loading-screen {
+          transition: opacity 0.5s ease-out;
       }
   </style>
 </head>
 <body>
-  <div class="loading-screen">
-    <img src="preloader.gif" alt="Loading...">
+  <div class="loading-screen" id="loading-screen">
+    <img src="preloader.gif" alt="Loading..." />
   </div>
   <!-- Navigation Menu -->
   <div class="nav-menu">
@@ -202,7 +210,7 @@
 
   <!-- Partners Section -->
   <div class="partners-container">
-    <p class="key-clients">Key <span style="color: darkblue;">Clients</span></p>
+    <p class="key-clients">Key <span style="color: darkblue;">Partners</span></p>
     <!-- Partner Items -->
     <div class="project-item">
       <img src="images/partner1.png" alt="Partner 1" />
@@ -340,23 +348,34 @@
 
   <script>
     // Show loading screen until all images are loaded
-    const loadingScreen = document.querySelector('.loading-screen');
     const images = document.querySelectorAll('img');
     let imagesLoaded = 0;
 
-    images.forEach((image) => {
-      image.addEventListener('load', () => {
-        imagesLoaded++;
-        if (imagesLoaded === images.length) {
-          loadingScreen.style.display = 'none';
-        }
-      });
+    function preloadImages(callback) {
+              let imagesLoaded = 0;
+              images.forEach((src) => {
+                  const img = new Image();
+                  img.src = src;
 
-      // Handle cached images in browsers
-      if (image.complete) {
-        image.dispatchEvent(new Event('load'));
-      }
-    });
+                  img.onload = () => {
+                      imagesLoaded++;
+                      if (imagesLoaded === images.length) callback();
+                  };
+
+                  img.onerror = () => {
+                      console.error(`Failed to load image: ${src}`);
+                      imagesLoaded++;
+                      if (imagesLoaded === images.length) callback();
+                  };
+              });
+          }
+          document.addEventListener("DOMContentLoaded", () => {
+            preloadImages(() => {
+                const loadingScreen = document.getElementById('loading-screen');
+                loadingScreen.style.opacity = '0'; // Add fade-out effect
+                setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out
+            });
+        });
 
     const menu = document.querySelector('.nav-menu');
     const menuBtn = document.querySelector('.nav-btn-menu');
