--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,31 @@
       height: 40px;
     }
 
+    /*loading screen*/
+    .loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 1000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fbfbfb;
+      }
+      .loading-screen img {
+        width: 150px; /* Adjust size of preloader image */
+      }
+      @media (max-width: 1050px) {
+        .loading-screen img{
+            width: 200px;
+          }
+      }
+      .loading-screen {
+          transition: opacity 0.5s ease-out;
+      }
+
      /* Hamburger Menu */
      .nav-menu {
             position: fixed;
@@ -231,6 +256,9 @@
   </style>
 </head>
 <body>
+  <div class="loading-screen" id="loading-screen">
+    <img src="preloader.gif" alt="Loading..." />
+  </div>
   <div class="nav-menu">
     <div>
         <span class="line1"></span>
@@ -255,7 +283,7 @@
   <div class="content">
     <div class="projects">
       <img src="bg2.png">
-      <a href="pro1.html"><p>Commercial Buildings</p></a>
+      <a href="pro1.html"><p>Commercial <br> Buildings</p></a>
     </div>
     <div class="projects">
       <img src="pro2.jpg">
@@ -267,7 +295,7 @@
     </div>
     <div class="projects">
       <img src="pro4.jpg">
-      <a href="pro4.html"><p>Pharmaceutical Factories</p></a>
+      <a href="pro4.html"><p>Pharmaceutical <br> Factories</p></a>
     </div>
     <div class="projects">
       <img src="bg10.png">
@@ -280,6 +308,34 @@
   </div>
   
   <script>
+    const images = document.querySelectorAll('img');
+
+function preloadImages(callback) {
+          let imagesLoaded = 0;
+          images.forEach((src) => {
+              const img = new Image();
+              img.src = src;
+
+              img.onload = () => {
+                  imagesLoaded++;
+                  if (imagesLoaded === images.length) callback();
+              };
+
+              img.onerror = () => {
+                  console.error(`Failed to load image: ${src}`);
+                  imagesLoaded++;
+                  if (imagesLoaded === images.length) callback();
+              };
+          });
+      }
+      document.addEventListener("DOMContentLoaded", () => {
+        preloadImages(() => {
+            const loadingScreen = document.getElementById('loading-screen');
+            loadingScreen.style.opacity = '0'; // Add fade-out effect
+            setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out
+        });
+    });
+    
     // Navigation Menu Toggle
     let menu = document.querySelector('.nav-menu');
       let menuBtn = document.querySelector('.nav-btn-menu');
