--- a/servises.html
+++ b/servises.html
@@ -29,6 +29,31 @@
       text-align: center;
     }
 
+    /*loading screen*/
+    .loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 1000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fbfbfb;
+      }
+      .loading-screen img {
+        width: 150px; /* Adjust size of preloader image */
+      }
+      @media (max-width: 1050px) {
+        .loading-screen img{
+            width: 200px;
+          }
+      }
+      .loading-screen {
+          transition: opacity 0.5s ease-out;
+      }
+
     .logo {
       width: 150px;
       display: block;
@@ -224,6 +249,10 @@
   </style>
 </head>
 <body>
+  <div class="loading-screen" id="loading-screen">
+    <img src="preloader.gif" alt="Loading..." />
+  </div>
+
   <div class="nav-menu">
     <div>
         <span class="line1"></span>
@@ -261,7 +290,7 @@
       </div>
       <div class="service-item">
         <div class="title">Plumbing</div>
-        <img src="images/Plumbing.jpg" alt="Plumbing">
+        <img src="images/plumbing.jpg" alt="Plumbing">
         <div class="content">
           <p class="description">Efficient and modern plumbing systems for all structures.</p>
         </div>
@@ -327,6 +356,34 @@
   </section>
 
   <script>
+    const images = document.querySelectorAll('img');
+
+function preloadImages(callback) {
+          let imagesLoaded = 0;
+          images.forEach((src) => {
+              const img = new Image();
+              img.src = src;
+
+              img.onload = () => {
+                  imagesLoaded++;
+                  if (imagesLoaded === images.length) callback();
+              };
+
+              img.onerror = () => {
+                  console.error(`Failed to load image: ${src}`);
+                  imagesLoaded++;
+                  if (imagesLoaded === images.length) callback();
+              };
+          });
+      }
+      document.addEventListener("DOMContentLoaded", () => {
+        preloadImages(() => {
+            const loadingScreen = document.getElementById('loading-screen');
+            loadingScreen.style.opacity = '0'; // Add fade-out effect
+            setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out
+        });
+    });
+    
     const menu = document.querySelector('.nav-menu');
     const menuBtn = document.querySelector('.nav-btn-menu');
     menu.addEventListener('click', () => {
