--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
         background-color: #fbfbfb;
       }
       .loading-screen img {
-        width: 150px; /* Adjust size of preloader image */
+        width: 100px; /* Adjust size of preloader image */
       }
       @media (max-width: 1050px) {
         .loading-screen img{
-            width: 200px;
+            width: 80px;
           }
       }
       .loading-screen {
@@ -911,21 +911,23 @@
 
           let currentImageIndex = 0;
 
+          const pics = document.querySelectorAll('img');
+
           function preloadImages(callback) {
               let imagesLoaded = 0;
-              images.forEach((src) => {
+              pics.forEach((src) => {
                   const img = new Image();
                   img.src = src;
 
                   img.onload = () => {
                       imagesLoaded++;
-                      if (imagesLoaded === images.length) callback();
+                      if (imagesLoaded === pics.length) callback();
                   };
 
                   img.onerror = () => {
                       console.error(`Failed to load image: ${src}`);
                       imagesLoaded++;
-                      if (imagesLoaded === images.length) callback();
+                      if (imagesLoaded === pics.length) callback();
                   };
               });
           }
