--- a/servises.html
+++ b/servises.html
@@ -246,6 +246,14 @@
       transform: scale(1.1);
       color: #ffa500;
     }
+    @media (max-width: 1000px) {
+      .nav-btn-menu {
+        width: 60%;
+      }
+      .trans-nav-btn-menu {
+        left: 40%;
+      }
+    }
   </style>
 </head>
 <body>
