--- a/projects.html
+++ b/projects.html
@@ -330,6 +330,14 @@
       }
     });
   }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    preloadImages(() => {
+      const loadingScreen = document.getElementById('loading-screen');
+      loadingScreen.style.opacity = '0'; // Add fade-out effect
+      setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out
+    });
+  });
     
     // Navigation Menu Toggle
     let menu = document.querySelector('.nav-menu');
