--- a/pro1.html
+++ b/pro1.html
@@ -219,7 +219,7 @@
       border: none;
       border-radius: 50%;
       background-color: #ccc;
-      cursor: pointer;
+      cursor: url(pointer.png), auto;
       transition: background-color 0.3s;
     }
 
