--- a/pro1.html
+++ b/pro1.html
@@ -449,6 +449,50 @@
   </div>
 </div>
 
+<!-- seven Project -->
+<div class="projects">
+  <div class="carousel">
+    <img src="images/picture36.png" class="active" alt="Project Image 36">
+    <img src="images/picture37.png" alt="Project Image 37">
+    <img src="images/picture38.png" alt="Project Image 38">
+    <img src="images/picture39.png" alt="Project Image 39">
+    <img src="images/picture40.png" alt="Project Image 40">
+    <div class="dots">
+      <button class="active"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+  </div>
+  <div class="carousel-content">
+    <h3>Wok and Walk restaurant</h3>
+    <p>SCOPE: Design, Supply & install Electromechanical works</p>
+  </div>
+</div>
+
+<!-- eight Project -->
+<div class="projects">
+  <div class="carousel">
+    <img src="images/picture41.png" class="active" alt="Project Image 41">
+    <img src="images/picture42.png" alt="Project Image 42">
+    <img src="images/picture43.png" alt="Project Image 43">
+    <img src="images/picture44.png" alt="Project Image 44">
+    <img src="images/picture45.png" alt="Project Image 45">
+    <div class="dots">
+      <button class="active"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+  </div>
+  <div class="carousel-content">
+    <h3>Del Sol Cafe</h3>
+    <p>SCOPE: Design, Supply & install Electromechanical works</p>
+  </div>
+</div>
+
 
 
 </div>
