--- a/pro1.html
+++ b/pro1.html
@@ -36,10 +36,49 @@
       height: 40px;
     }
 
+    /*loading screen*/
+    .loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 1000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fbfbfb;
+      }
+      .loading-screen img {
+        width: 130px; /* Adjust size of preloader image */
+      }
+      @media (max-width: 1050px) {
+        .loading-screen img{
+            width: 80px;
+          }
+      }
+      .loading-screen {
+          transition: opacity 0.5s ease-out;
+      }
+      .skip {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+      }
+      .skip button {
+        border: none;
+        background: none;
+        font: 1em sans-serif;
+        color: #ff8000;
+      }
+      .skip p {
+        font: 0.8em sans-serif;
+      }
+
      /* Hamburger Menu */
      .nav-menu {
             position: fixed;
-            top: 10px;
+            top: 15px;
             right: 10px;
             height: 50px;
             width: 50px;
@@ -152,13 +191,15 @@
       max-width: 800px;
       display: flex;
       flex-direction: column;
-      gap: 50px;
+      gap: 20px;
     }
 
     .carousel {
       position: relative;
       width: 100%;
-      height: 400px;
+      aspect-ratio: 16 / 9;
+      border-radius: 15px;
+      overflow: hidden;
     }
 
     .carousel img {
@@ -170,7 +211,6 @@
       left: 0;
       opacity: 0;
       transition: opacity 1s ease-in-out;
-      border-radius: 15px;
     }
 
     .carousel img.active {
@@ -179,7 +219,7 @@
 
     .dots {
       position: absolute;
-      bottom: 30px;
+      bottom: 15px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -192,7 +232,7 @@
       border: none;
       border-radius: 50%;
       background-color: #ccc;
-      cursor: pointer;
+      cursor: url(pointer.png), auto;
       transition: background-color 0.3s;
     }
 
@@ -202,7 +242,7 @@
 
     .carousel-content {
       text-align: center;
-      padding: 15px 20px;
+      margin-top: 15px;
     }
 
     .carousel-content h3 {
@@ -217,9 +257,34 @@
       font-size: 16px;
       color: #666;
     }
+
+    /* Responsive Dots Placement */
+    @media (max-width: 900px) {
+      .dots {
+        bottom: 10px;
+      }
+      .nav-btn-menu {
+        width: 50%;
+      }
+      .trans-nav-btn-menu {
+        left: 50%;
+      }
+    }
+
+
   </style>
 </head>
 <body>
+  <div class="loading-screen" id="loading-screen">
+    <img src="preloader.gif" alt="Loading..." />
+    <div class="skip">
+      <button onclick="const loadingScreen = document.getElementById('loading-screen');
+      loadingScreen.style.opacity = '0'; // Add fade-out effect
+      setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out">skip loading...</button>
+      <p>images may not appear properly</p>
+    </div>
+  </div>
+
   <div class="nav-menu">
     <div>
         <span class="line1"></span>
@@ -244,11 +309,11 @@
     <!-- First Project -->
     <div class="projects">
       <div class="carousel">
-        <img src="images/Picture1.png" class="active" alt="Project Image 1">
-        <img src="images/Picture2.png" alt="Project Image 2">
-        <img src="images/Picture3.png" alt="Project Image 3">
-        <img src="images/Picture4.png" alt="Project Image 4">
-        <img src="images/Picture5.png" alt="Project Image 5">
+        <img src="images/picture1.png" class="active" alt="Project Image 1">
+        <img src="images/picture2.png" alt="Project Image 2">
+        <img src="images/picture3.png" alt="Project Image 3">
+        <img src="images/picture4.png" alt="Project Image 4">
+        <img src="images/picture5.png" alt="Project Image 5">
         <div class="dots">
           <button class="active"></button>
           <button></button>
@@ -263,16 +328,53 @@
       </div>
     </div>
 
+    <!-- third Project -->
+  <div class="projects">
+    <div class="carousel">
+      <img src="images/picture10.png" class="active" alt="Project Image 10">
+      <img src="images/picture11.png" alt="Project Image 11">
+      <img src="images/picture12.png" alt="Project Image 12">
+      <img src="images/picture13.png" alt="Project Image 13">
+      <img src="images/picture14.png" alt="Project Image 14">
+      <img src="images/picture15.png" alt="Project Image 15">
+      <img src="images/picture16.png" alt="Project Image 16">
+      <img src="images/picture17.png" alt="Project Image 17">
+      <img src="images/picture18.png" alt="Project Image 18">
+      <img src="images/picture19.png" alt="Project Image 19">
+      <img src="images/picture20.png" alt="Project Image 20">
+      <img src="images/picture21.png" alt="Project Image 21">
+      <img src="images/picture22.png" alt="Project Image 22">
+      <div class="dots">
+        <button class="active"></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+      </div>
+    </div>
+    <div class="carousel-content">
+      <h3>Almasa cap floor</h3>
+      <p>SCOPE: Supply & install HVAC & Mechanical  works  for the Top floor with area 3000 m2</p>
+    </div>
+   </div>
+
     <!-- Second Project -->
     <div class="projects">
       <div class="carousel">
-        <img src="images/Picture6.png" class="active" alt="Project Image 6">
-        <img src="images/Picture7.png" alt="Project Image 7">
-        <img src="images/Picture8.png" alt="Project Image 8">
-        <img src="images/Picture9.png" alt="Project Image 9">
+        <img src="images/picture6.png" class="active" alt="Project Image 6">
+        <img src="images/picture7.png" alt="Project Image 7">
+        <img src="images/picture8.png" alt="Project Image 8">
+        <img src="images/picture9.png" alt="Project Image 9">
         <div class="dots">
           <button class="active"></button>
-          <button></button>
           <button></button>
           <button></button>
           <button></button>
@@ -282,38 +384,214 @@
         <h3>Bitter sweet</h3>
         <p>SCOPE: Electromechanical works for 4 Branches</p>
       </div>
+  </div>
+  
+
+  <!-- forth Project -->
+  <div class="projects">
+    <div class="carousel">
+      <img src="images/picture23.png" class="active" alt="Project Image 23">
+      <img src="images/picture24.png" alt="Project Image 24">
+      <img src="images/picture25.png" alt="Project Image 25">
+      <img src="images/picture26.png" alt="Project Image 26">
+      <img src="images/picture27.png" alt="Project Image 26">
+      <div class="dots">
+        <button class="active"></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+      </div>
+    </div>
+    <div class="carousel-content">
+      <h3>Aspero restaurant</h3>
+      <p>SCOPE: Design, Supply & install Electromechanical works</p>
     </div>
   </div>
 
+
+<!-- fifth Project -->
+<div class="projects">
+  <div class="carousel">
+    <img src="images/picture28.png" class="active" alt="Project Image 28">
+    <img src="images/picture29.png" alt="Project Image 29">
+    <img src="images/picture30.png" alt="Project Image 30">
+    <img src="images/picture31.png" alt="Project Image 31">
+    <div class="dots">
+      <button class="active"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+  </div>
+  <div class="carousel-content">
+    <h3>Ellie home</h3>
+    <p>SCOPE: Design, supply & install Electromechanical works for all Branches</p>
+  </div>
+</div>
+<!-- six Project -->
+<div class="projects">
+  <div class="carousel">
+    <img src="images/picture32.png" class="active" alt="Project Image 32">
+    <img src="images/picture33.png" alt="Project Image 33">
+    <img src="images/picture34.png" alt="Project Image 34">
+    <img src="images/picture35.png" alt="Project Image 35">
+    <div class="dots">
+      <button class="active"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+  </div>
+  <div class="carousel-content">
+    <h3>Variegato restaurant</h3>
+    <p>SCOPE: Design, Supply & install Electromechanical works</p>
+  </div>
+</div>
+
+<!-- seven Project -->
+<div class="projects">
+  <div class="carousel">
+    <img src="images/picture36.png" class="active" alt="Project Image 36">
+    <img src="images/picture37.png" alt="Project Image 37">
+    <img src="images/picture38.png" alt="Project Image 38">
+    <img src="images/picture39.png" alt="Project Image 39">
+    <img src="images/picture40.png" alt="Project Image 40">
+    <div class="dots">
+      <button class="active"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+  </div>
+  <div class="carousel-content">
+    <h3>Wok and Walk restaurant</h3>
+    <p>SCOPE: Design, Supply & install Electromechanical works</p>
+  </div>
+</div>
+
+<!-- eight Project -->
+<div class="projects">
+  <div class="carousel">
+    <img src="images/picture41.png" class="active" alt="Project Image 41">
+    <img src="images/picture42.png" alt="Project Image 42">
+    <img src="images/picture43.png" alt="Project Image 43">
+    <img src="images/picture44.png" alt="Project Image 44">
+    <img src="images/picture45.png" alt="Project Image 45">
+    <div class="dots">
+      <button class="active"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+  </div>
+  <div class="carousel-content">
+    <h3>Del Sol Cafe</h3>
+    <p>SCOPE: Design, Supply & install Electromechanical works</p>
+  </div>
+</div>
+
+
+
+</div>
+
   <script>
-    const carousels = document.querySelectorAll('.projects');
+    function preloadImages(callback) {
+    const images = document.querySelectorAll('img'); // Select all img elements
+    let imagesLoaded = 0;
 
-    carousels.forEach(project => {
-      const images = project.querySelectorAll('.carousel img');
-      const dots = project.querySelectorAll('.dots button');
-      let currentIndex = 0;
-
-      function showImage(index) {
-        images.forEach((img, i) => {
-          img.classList.toggle('active', i === index);
-        });
-        dots.forEach((dot, i) => {
-          dot.classList.toggle('active', i === index);
-        });
-        currentIndex = index;
+    images.forEach((img) => {
+      if (img.complete) {
+        // If the image is already cached, count it as loaded
+        imagesLoaded++;
+        if (imagesLoaded === images.length) callback();
+      } else {
+        img.onload = () => {
+          imagesLoaded++;
+          if (imagesLoaded === images.length) callback();
+        };
+        img.onerror = () => {
+          console.error(`Failed to load image: ${img.src}`);
+          imagesLoaded++;
+          if (imagesLoaded === images.length) callback();
+        };
       }
-
-      function nextImage() {
-        const nextIndex = (currentIndex + 1) % images.length;
-        showImage(nextIndex);
-      }
-
-      dots.forEach((dot, index) => {
-        dot.addEventListener('click', () => showImage(index));
-      });
-
-      setInterval(nextImage, 2000); // Change image every 2 seconds
     });
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    preloadImages(() => {
+      const loadingScreen = document.getElementById('loading-screen');
+      loadingScreen.style.opacity = '0'; // Add fade-out effect
+      setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out
+    });
+  });
+
+
+
+    document.querySelectorAll('.projects').forEach((project) => {
+    const images = project.querySelectorAll('.carousel img');
+    const dots = project.querySelectorAll('.dots button');
+    let currentIndex = 0;
+    let startX = 0, endX = 0;
+    let timer;
+
+    function showImage(index) {
+      images.forEach((img, i) => {
+        img.classList.toggle('active', i === index);
+      });
+      dots.forEach((dot, i) => {
+        dot.classList.toggle('active', i === index);
+      });
+      currentIndex = index;
+    }
+
+    function nextImage() {
+      showImage((currentIndex + 1) % images.length);
+    }
+
+    function previousImage() {
+      showImage((currentIndex - 1 + images.length) % images.length);
+    }
+
+    // Dot click event
+    dots.forEach((dot, index) => {
+      dot.addEventListener('click', () => {
+        clearInterval(timer); // Pause automatic slide on manual interaction
+        showImage(index);
+        startAutoSlide(); // Restart automatic slide
+      });
+    });
+
+    // Swipe detection
+    project.querySelector('.carousel').addEventListener('touchstart', (e) => {
+      startX = e.touches[0].clientX;
+    });
+
+    project.querySelector('.carousel').addEventListener('touchmove', (e) => {
+      endX = e.touches[0].clientX;
+    });
+
+    project.querySelector('.carousel').addEventListener('touchend', () => {
+      if (startX - endX > 50) {
+        nextImage();
+      } else if (endX - startX > 50) {
+        previousImage();
+      }
+    });
+
+    // Auto-slide functionality
+    function startAutoSlide() {
+      timer = setInterval(nextImage, 2500); // Change image every 3 seconds
+    }
+
+    // Initialize
+    showImage(0); // Show the first image
+    startAutoSlide(); // Start automatic sliding
+  });
+
     // Navigation Menu Toggle
     let menu = document.querySelector('.nav-menu');
       let menuBtn = document.querySelector('.nav-btn-menu');
