--- a/servises.html
+++ b/servises.html
@@ -29,6 +29,45 @@
       text-align: center;
     }
 
+    /*loading screen*/
+    .loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 1000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fbfbfb;
+      }
+      .loading-screen img {
+        width: 130px; /* Adjust size of preloader image */
+      }
+      @media (max-width: 1050px) {
+        .loading-screen img{
+            width: 80px;
+          }
+      }
+      .loading-screen {
+          transition: opacity 0.5s ease-out;
+      }
+      .skip {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+      }
+      .skip button {
+        border: none;
+        background: none;
+        font: 1em sans-serif;
+        color: #ff8000;
+      }
+      .skip p {
+        font: 0.8em sans-serif;
+      }
+
     .logo {
       width: 150px;
       display: block;
@@ -221,9 +260,27 @@
       transform: scale(1.1);
       color: #ffa500;
     }
+    @media (max-width: 1000px) {
+      .nav-btn-menu {
+        width: 60%;
+      }
+      .trans-nav-btn-menu {
+        left: 40%;
+      }
+    }
   </style>
 </head>
 <body>
+  <div class="loading-screen" id="loading-screen">
+    <img src="preloader.gif" alt="Loading..." />
+    <div class="skip">
+      <button onclick="const loadingScreen = document.getElementById('loading-screen');
+      loadingScreen.style.opacity = '0'; // Add fade-out effect
+      setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out">skip loading...</button>
+      <p>images may not appear properly</p>
+    </div>
+  </div>
+
   <div class="nav-menu">
     <div>
         <span class="line1"></span>
@@ -327,6 +384,34 @@
   </section>
 
   <script>
+    const images = document.querySelectorAll('img');
+
+function preloadImages(callback) {
+          let imagesLoaded = 0;
+          images.forEach((image) => {
+              const img = new Image();
+              img.src = image.src;
+
+              img.onload = () => {
+                  imagesLoaded++;
+                  if (imagesLoaded === images.length) callback();
+              };
+
+              img.onerror = () => {
+                  console.error(`Failed to load image: ${src}`);
+                  imagesLoaded++;
+                  if (imagesLoaded === images.length) callback();
+              };
+          });
+      }
+      document.addEventListener("DOMContentLoaded", () => {
+        preloadImages(() => {
+            const loadingScreen = document.getElementById('loading-screen');
+            loadingScreen.style.opacity = '0'; // Add fade-out effect
+            setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out
+        });
+    });
+    
     const menu = document.querySelector('.nav-menu');
     const menuBtn = document.querySelector('.nav-btn-menu');
     menu.addEventListener('click', () => {
