--- a/pro2.html
+++ b/pro2.html
@@ -338,9 +338,9 @@
     <!-- second Project -->
   <div class="projects">
     <div class="carousel">
-      <img src="images/admin10.png" class="active" alt="Project Image 10">
-      <img src="images/admin11.png" alt="Project Image 11">
-      <img src="images/admin12.png" alt="Project Image 12">
+      <img src="images/fact10.png" class="active" alt="Project Image 10">
+      <img src="images/fact11.png" alt="Project Image 11">
+      <img src="images/fact12.png" alt="Project Image 12">
       <div class="dots">
         <button class="active"></button>
         <button></button>
@@ -500,4 +500,3 @@
   </script>
 </body>
 </html>
-
